Fixed image jumping effect upon being focused

--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
@@ -112,7 +112,7 @@
     overflow: hidden;
     position: relative;
     box-shadow: none;
-    border-bottom: 2px solid @admin-white;
+    border: 1px solid @admin-white;
 
     .image-canvas {
       position: absolute;
